# not-powerful-translator

./: .gitignore  .icon_rc.py  CHANGELOG  CMakeLists.txt  Makefile  README.md  Session.vim  chatgpt_trans.py  deepL_trans.py  form.ui  form_ui.py  getinfo.py  google_trans.py  icon.qrc  icon_rc.py  main.cpp  main.py  mainwindow.cpp  mainwindow.h  mainwindow.py  mainwindow.ui  mainwindow_ui.py  mouse_listen.py  requirements.txt  resource.qrc  resource.rc
include/: Settings.cpp  Settings.h
include/ScreenShot/: ScreenShot.h
include/TransEngine/: BaiduEngine.h  BasicEngine.h  GoogleEngine.h  OpenAIEngine.h  md5.h
include/mouse_selection/: EncodeConvert.h  MouseSelection.h
include/widget/: customtextbrowser.h
menu/: settings_manager.py  settings_window.py
src/ScreenShot/: CMakeLists.txt  ScreenShot.cpp
src/ScreenShot/ScreenShot_main/: ScreenShot_main.cpp
src/TransEngine/: BaiduEngine.cpp  BasicEngine.cpp  CMakeLists.txt  GoogleEngine.cpp  OpenAIEngine.cpp  md5.cpp
src/TransEngine/test/: engine-main.cpp
src/mouse_selection/: CMakeLists.txt  EncodeConvert.cpp  MouseSelection.cpp  ms-main.cpp
src/widget/: CMakeLists.txt  customtextbrowser.cpp
utils/: __init__.py  aux.py  func.py  settings.py
utils/sst/: Screenshot.py  __init__.py
utils/sst/OCR/: __init__.py  ocr test.py  ocr_process.py  switch_image.py
utils/sst/OCR/utils/: rm_single_newline.py
utils/trans_engine/: __init__.py  baidu_fanyi.py  chatgpt_trans.py  deepL_trans.py  google_trans.py
widget/: customButton.py  customtextbrowser.py
